# control-plane

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
buckle/: Cargo.toml  README.md  build.rs  example_config.yaml
buckle/proto/: buckle.proto
buckle/src/: client.rs  config.rs  grpc.rs  lib.rs  middleware.rs  migrations.rs  server.rs  sysinfo.rs  systemd.rs  testutil.rs  upnp.rs  zfs.rs
buckle/src/migration/: mod.rs  plan.rs  plans.rs  utils.rs
charon/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  example_config.yaml
charon/proto/: charond.proto
charon/src/: client.rs  config.rs  globals.rs  grpc.rs  input.rs  lib.rs  package.rs  prompt.rs  systemd.rs
charon/src/cli/: mod.rs  tests.rs
charon/src/qmp/: client.rs  mod.rs
charon/src/qmp/messages/: block.rs  mod.rs
charon/src/server/: mod.rs  tests.rs
gild/: Cargo.toml
gild/migrations/: 002_audit_log.sql
gild/src/: config.rs  testutil.rs
gild/src/db/: migrations.rs  mod.rs
gild/src/db/models/: log.rs  session.rs  tests.rs  user.rs
gild/src/server/: axum_support.rs  handlers.rs  messages.rs  mod.rs  tests.rs
vayama/: Cargo.toml  README.md  todo.md
vayama/src/: lib.rs  migration.rs  tests.rs  utils.rs
