[package]
name = "buckle"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = [ "full" ] }
tonic = "^0.13"
tonic-middleware = "*"
prost = "^0.13"
prost-types = "^0.13"
clap = { version = "*", features = [ "derive" ] }
anyhow = "*"
fancy-duration = "*"
serde = { version = "*", features = [ "derive" ] }
serde_yaml_ng = "*"
serde_json = "*"
tokio-stream = "*"
tempfile = { version = "*", optional = true }
sysinfo = { version = "*", features = [ "default", "linux-netdevs", "linux-tmpfs" ] }
tracing = { version = "*", features = [ "log" ] }
tracing-subscriber = "*"
zbus_systemd = { version = "*", features = [ "systemd1" ] }
systemd = "*"

[build-dependencies]
tonic-build = "^0.13"

[dev-dependencies]
tempfile = "*"

# these are currently only used for testing
[features]
zfs = [] 
test = [ "tempfile" ]
