[package]
name = "charon"
version = "0.1.0"
edition = "2024"

[dependencies]
buckle = { version = "*", path = "../buckle" }
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
serde_yaml_ng = "*"
anyhow = "*"
clap = { version = "*", features = [ "derive" ] }
curl = "*"
url = "*"
zbus_systemd = { version = "*", features = [ "systemd1" ] }
tokio = { version = "*", features = [ "full" ] }
tonic = "*"
prost = "*"
tracing = { version = "*", features = [ "log" ] }
tracing-subscriber = "*"
tokio-stream = "*"
tonic-middleware = "*"
http = "*"
fancy-duration = "*"
lazy_static = "*"
libc = "*"
reqwest = "*"
tempfile = "*"
tonic-prost = "*"

[build-dependencies]
tonic-prost-build = "*"
